[58521] chore: code review